# book-search

./: .gitignore  PROJECT_REVIEW.md  README.md  pyproject.toml
src/book_search/: __init__.py  calibre.py  chapters.py  citations.py  cli.py  companion.py  config.py  doctor.py  eval.py  eval_fixtures.py  export_html.py  ingest_warnings.py  llm.py  paths.py  pipeline.py  retrieval.py  session_io.py  spoiler.py  testdata.py  util.py
src/book_search/extractors/: __init__.py  epub.py
src/book_search/ui/: __init__.py  handlers.py  markdown.py  server.py
tests/: conftest.py  helpers.py  test_citations.py  test_config.py  test_doctor.py  test_epub.py  test_eval.py  test_export_html.py  test_ingest_warnings.py  test_llm.py  test_retrieval.py  test_scenarios.py  test_session_io.py  test_spoiler.py  test_ui.py
